login, logout, media dans category et produit + forms

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,6 +23,7 @@ security:
                     - App\Security\LoginFormAuthenticator
             logout:
                 path: app_logout
+                target: product_index
                 # where to redirect after logout
                 # target: app_any_route
 
