--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,3 +38,4 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+    access_denied_url: app_login
