--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,9 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            form_login:
+                # ...
+                default_target_path: product_index
             anonymous: true
             guard:
                 authenticators:
@@ -27,6 +30,10 @@ security:
                 # where to redirect after logout
                 # target: app_any_route
 
+    access_control:
+        # require ROLE_ADMIN for anything starting with admin in url
+        - { path: '^/admin', roles: ROLE_ADMIN }
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
@@ -35,7 +42,5 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+
     access_denied_url: app_login
