border cards & ajustement affichage prix

--- a/.env
+++ b/.env
@@ -26,6 +26,7 @@ APP_SECRET=69d698a7eb1794785bf70246cb0fec80
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 # DATABASE_URL=sqlite:///%kernel.project_dir%/var/data.db
 DATABASE_URL=mysql://root:mysql@127.0.0.1:3306/UrbexShop?serverVersion=5.7
+# DATABASE_URL=mysql://licence16:projetwewv-licence16c5H7d89eUb@np16029-001.privatesql:35815/licence16?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
